[GLAM-548] Prevent search highlights text from overflowing

--- a/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.scss
+++ b/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.scss
@@ -34,3 +34,7 @@ button:hover {
         cursor: pointer;
     }
 }
+
+.text-highlights {
+  overflow-wrap: anywhere;
+}
